--- a/src/components/services.css
+++ b/src/components/services.css
@@ -140,12 +140,15 @@ font-family: 'Titillium Web', sans-serif; */
   .services_title p {
     width: 250px;
     margin: 0 0 24px 0;
-    font-size: 20px;
+    font-size: 12px;
   }
   .services_title h3 {
     width: 350px;
     height: 27px;
     margin: 8px 0 0;
+  }
+  .services_title h1 {
+    font-size: 18px;
   }
 
   .services_cards {
