--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -69,6 +69,9 @@ font-family: 'Titillium Web', sans-serif; */
 }
 
 @media screen and (max-device-width: 420px) {
+  .banner {
+    overflow-y: hidden !important;
+  }
   .clouds img {
     top: 72.5%;
   }
