--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -268,6 +268,9 @@ font-family: 'Titillium Web', sans-serif; */
 }
 
 @media screen and (max-device-width: 420px) {
+  .footer {
+    overflow-y: hidden !important;
+  }
   .content1 {
     top: 7%;
     left: 20%;
