--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -216,11 +216,16 @@ font-family: 'Titillium Web', sans-serif; */
 }
 
 @media screen and (max-device-width: 420px) {
+  .navbar {
+    overflow-y: hidden !important;
+  }
   .ham_content {
-    top: 0%;
+    top: 4%;
     left: -130.5%;
     display: flex;
     flex-direction: column;
+
+    overflow-y: hidden;
   }
 
   .right_full_nav p {
@@ -257,10 +262,10 @@ font-family: 'Titillium Web', sans-serif; */
     top: 72.5%;
     position: absolute;
     left: 38%; */
-    width: 26%;
+    width: 29%;
     top: 73.5%;
     position: absolute;
-    left: 41%;
+    left: 32%;
   }
   .cloudy img {
     width: 100%;
@@ -269,8 +274,8 @@ font-family: 'Titillium Web', sans-serif; */
     width: 35px;
     z-index: 10000;
     position: absolute;
-    top: 0%;
-    left: 75%;
+    top: -5%;
+    left: 72%;
   }
   .right_full_nav {
     display: flex;
@@ -278,7 +283,7 @@ font-family: 'Titillium Web', sans-serif; */
     align-items: center;
     text-align: center;
     margin-top: 5rem;
-    margin-left: 10rem;
+    margin-left: 0rem;
   }
   .mobi {
     display: block;
